--- a/app.json
+++ b/app.json
@@ -1,29 +1,13 @@
 {
   "expo": {
-    "name": "chai-vadapav-app",
-    "slug": "chai-vadapav-app",
+    "name": "CHAI-V...",
+    "slug": "chai-v",
     "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "icon": "./src/assets/samosa.jpg",
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./src/assets/samosa.jpg",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      "backgroundColor": "#000000"
     }
   }
 }
